 * Renamed TemporalFunction to VertexValueFunction
 * Deprecated [gs]etOptimizationSolver methods
 * Renamed ProductNumericalMathFunction to ProductFunction
 * Deprecated KarhunenLoeveP1Factory, KarhunenLoeveQuadratureFactory
 * Deprecated GramSchmidtAlgorithm, ChebychevAlgorithm
 * Added getSobolAggregatedIndices() to FunctionalChaosRandomVector
 * Added computeWeight() to Mesh

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #729 (KDTree & save)
 * #774 (Exact limits of a normal distribution with unknown mean and variance)
 * #869 (The ProductNumericalMathFunction class has no example)
 * #871 (GeneralizedExponential P parameter : int or float ?)
 * #872 (Cannot draw a Text drawable using R)
 * #874 (Compatibility between a distribution factory and an alternate parametrization not checked)
 * #875 (TruncatedNormalFactory randomly crashes)
 * #876 (Bad time grid in StationaryCovarianceModelFactory::build)
 * #878 (Viewer does not take into account labels in Contour)
 * #879 (Incomplete arguments in FunctionalChaosRandomVector docstrings)
 * #882 (RandomMixture segfaults with Dirac)
 * #883 (VisualTest.DrawHistogram should rely on Histogram.drawPDF)

== 1.8 release (2016-11-18) == #release-1.8

=== Library ===

==== Major changes ====
 * Changed the default orthonormalization algorithm of StandardDistributionPolynomialFactory from GramSchmidtAlgorithm to AdaptiveStieltjesAlgorithm
 * New api for sensitivity analysis
 * New methods to compute confidence regions in Distribution

==== New classes ====
 * SubsetSampling
 * AdaptiveDirectionalSampling
 * KarhunenLoeveQuadratureFactory
 * SobolIndicesAlgorithm
 * SaltelliSensitivityAlgorithm
 * MartinezSensitivityAlgorithm
 * JansenSensitivityAlgorithm
 * MauntzKucherenkoSensitivityAlgorithm
 * SoizeGhanemFactory
 * LevelSetMesher
 * HistogramPolynomialFactory
 * ChebychevFactory
 * FourierSeriesFactory, HaarWaveletFactory
 * OrthogonalProductFunctionFactory

==== API changes ====